# COS214_P4

./: .gitignore
Prac 4/: Aggregate.cpp  Aggregate.h  Barn.cpp  Barn.h  CMakeLists.txt  ConcreteFarm.cpp  ConcreteFarm.h  CropField.cpp  CropField.h  CropState.h  DeliveryTruck.cpp  DeliveryTruck.h  DemoMain.cpp  DrySoil.cpp  DrySoil.h  ExtraBarn.cpp  ExtraBarn.h  Farm.cpp  Farm.h  FarmUnit.cpp  FarmUnit.h  Farmer.cpp  Farmer.h  FertilizerTruck.cpp  FertilizerTruck.h  FloodedSoil.cpp  FloodedSoil.h  FruitfulSoil.cpp  FruitfulSoil.h  FullyGrown.cpp  FullyGrown.h  Growing.cpp  Growing.h  Iterator.cpp  Iterator.h  LogBook.cpp  LogBook.h  Memory.cpp  Memory.h  MoistSoil.cpp  (+7 more)
Prac 4/UML/: Prac4 UML V1.vpp  Prac4 UML V1.vpp.bak_000f  Prac4 UML V1.vpp.bak_001d  Prac4 UML V1.vpp.bak_002d
